--- a/css/main.css
+++ b/css/main.css
@@ -3,16 +3,19 @@ li {
   color: black;
 }
 
+
+
+@font-face {
+font-family: 'Georgia';
+src: url('Georgia.tff.eot?') format('tff'),
+
+}
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Georgia'
 }
 
-@font-face {
-font-family: 'quadranta';
-src: url('quadranta.eot?') format('eot'),
-
-}
 
 /****************************************************header************************************************/
 
@@ -30,6 +33,7 @@ header {
 #navbas button {
   border: none;
 }
+
 #navbas .logo {
   width: 200px;
 
@@ -65,4 +69,90 @@ header {
 
 #navbarSupportedContent a {
   font-size: 12px;
+}
+/******************************************main********************************************/
+
+main h1 {
+  font-size: 1.5em;
+  font-weight: 500;
+  margin-top: 40px;
+  margin-left: 20px;
+  margin-bottom: 40px;
+}
+
+main {
+  background-image: url(../img/background/bg2.png);
+}
+
+main .taille {
+  flex-wrap: wrap;
+  width: 91%;
+  margin: auto;
+
+}
+
+
+
+main .nav-pills .nav-link.active
+{
+  background-color: #4A4A4C ;
+  background-image: none;
+}
+
+main .nav-pills .nav-link {
+font-size: 16px;
+line-height: 1.42857;
+color: #555;
+box-shadow: inset 0 0 3px rgba(68,68,68,0.08);
+background-image: url(../img/background/bg.png);
+margin-right: 10px;
+margin-bottom: 10px;
+width: 62px;
+height: 26px;
+text-align: center;
+font-size: 12px;
+
+}
+
+main .nav-pills .nav-link:hover {
+  background-color: #4A4A4C ;
+  background-image: none;
+  color: white;
+}
+
+/**********************gallerie*************************************/
+.home figure {
+  display: flex;
+  flex-flow: column nowrap;
+  margin-top: 20px;
+}
+
+.home figure img {
+  width: 95%
+
+}
+
+.home figure h4 {
+  box-shadow: inset 0 0 3px rgba(68,68,68,0.08);
+  background-image: url(../img/background/bg.png);
+  border-radius : 3px;
+  width : 50px;
+  font-size: 12px;
+  padding: 5px;
+  margin-left: auto;
+}
+
+.home figure figcaption {
+  text-align: center;
+  color: #555555;
+font-style: italic;
+font-size: 12px;
+}
+
+.home figure a:hover {
+  text-decoration: none;
+}
+
+.home figure ul {
+  display: none;
 }
