--- a/css/main.css
+++ b/css/main.css
@@ -250,3 +250,33 @@ footer {
 #footli img {
   width: 60px;
 }
+
+footer {
+  text-align: center;
+}
+
+#newsletter input {
+  width: 80%;
+  height: 30px;
+}
+
+#newsletter button {
+  height: 30px;
+  width: 30px;
+  border-radius: 0;
+  font-size: 11px;
+  padding: 0;
+  background-color: white;
+  border-color: #ccc
+}
+
+#newsletter button:hover {
+  background-color: #B9D6DB
+}
+
+#webdesign, #newsletter, #cgv a {
+  font-size: 11px;
+  font-style: italic;
+  text-decoration: none;
+  color: #555;
+}
