blog.html>make the html structure

--- a/css/main.css
+++ b/css/main.css
@@ -16,7 +16,7 @@ src: url('Georgia.tff.eot?') format('tff'),
   font-family: 'Georgia'
 }
 
-
+/***************************************************************************************accueil*****************************************/
 /****************************************************header************************************************/
 
 header {
@@ -288,7 +288,10 @@ footer {
   color: #555;
 }
 
-/**************************************************fin accueil*************************************/
+/**************************************************fin accueil*************************************************************************/
+/**************************************************blog*************************************************************************/
+/******************************************header******************************************/
+
 @media (min-width: 760px) {
   /********************************************accueil************************************/
   /***********************main*************************/
@@ -541,5 +544,21 @@ padding-top: 20px;
 #footli li a {
   font-size: 17px;
   justify-content: space-around;
+}
+
+
+#papier-blog {
+  background-image: url(../img/background/ticket-repeat.png);
+  width: 320px;
+  background-size: cover;
+
+}
+
+#papier-blog a {
+  color: #C47B81;
+  width: 100%;
+  padding-top: 30px;
+
+  text-align: center;
 }
 }
