--- a/css/main.css
+++ b/css/main.css
@@ -371,6 +371,10 @@ footer {
 
 }
 
+#footli {
+  padding-top: 40px;
+}
+
 #footli li {
 
   display: flex;
@@ -577,11 +581,20 @@ padding-top: 20px;
 }
 
 /*******************************************************footer**********************************/
+
+
 #footli li a {
   font-size: 17px;
-  justify-content: space-around;
+
+  width: 80%;
+  margin-left: 40px;
+
 }
 
+
+
+/**************************************************blog***************************************/
+/*****************************header*******************************/
 
 #papier-blog {
   background-image: url(../img/background/ticket-repeat.png);
@@ -596,5 +609,35 @@ padding-top: 20px;
   padding-top: 30px;
 
   text-align: center;
+}
+
+/*********************************main**********************/
+/********************aside*****************/
+aside img {
+  width: 18%;
+  position: absolute;
+  left : -57px;
+}
+
+aside article {
+  margin-left: 50px;
+  position: relative;
+  margin-top: 30px;
+}
+
+aside article li:hover a {
+  color: #333;
+  text-decoration: none;
+}
+
+aside article li {
+  width: 100%;
+  border-bottom: 1px dashed #eee;
+  margin-bottom: 5px;
+}
+aside article li a {
+  /*border-bottom: 1px dashed #eee;*/
+  width: 150px;
+  font-size: 15px;
 }
 }
