make comments in html and css

--- a/css/main.css
+++ b/css/main.css
@@ -25,10 +25,9 @@ header {
   top: 0;
   z-index: 20;
   background-color: white;
-
   box-shadow: 2px 0 2px black;
 }
-
+/*******************************menu hamburger**********************************/
 #navbas button img{
   width: 20px;
 
@@ -81,6 +80,7 @@ header {
   font-size: 20px;
   margin-right: 10px;
 }
+/*******************************fin menu hamburger**********************************/
 /******************************************main********************************************/
 
 main h1 {
@@ -94,7 +94,7 @@ main h1 {
 main {
   background-image: url(../img/background/bg2.png);
 }
-
+/**************************nav taille chaussettes*****************************/
 main .taille {
   flex-wrap: wrap;
   width: 91%;
@@ -378,7 +378,7 @@ footer {
 
 
 
-
+/***********************************************************************tablette*************************************************/
 
 @media (min-width: 760px) {
   /********************************************accueil************************************/
@@ -467,6 +467,7 @@ footer {
 }
 
 /*******************************************fin footer*********************************/
+/*****************************************************************pc****************************************/
 
 @media (min-width: 960px) {
 
